--- a/src/index.pug
+++ b/src/index.pug
@@ -18,5 +18,5 @@ html(lang="en" data-ng-app="app")
 		link(href="css/main.css" rel="stylesheet")
 
 	body
-		div(data-ui-view)
+		main(data-ui-view)
 		script(src="app/main.js")
