--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -3,14 +3,35 @@ html {
 }
 
 body {
+    background: $yellow;
     min-height: 100vh;
     margin: 0 auto;
-    @include font;    
+    @include font;
+    font-family: $os;
 }
 
 a {
+    color: $blue-dark;
+    font-size: 1.4rem;
+    font-weight: 600;
+    letter-spacing: -.05rem;
     text-decoration: none;
     @include transition(.2s);
+
+    &.active {
+        color: $gray-500;
+        border-bottom: 1px solid $gray-500;
+
+        &:hover {
+            color: $blue-dark;
+        }        
+
+    }
+
+    &:hover {
+        color: $red;
+    }
+
 }
 
 ul {
