--- a/src/scss/base/_colors.scss
+++ b/src/scss/base/_colors.scss
@@ -1,2 +1,16 @@
 $white: #ffffff;
 $black: #000000;
+
+$gray-100: #fbfbfb;
+$gray-200: #eeeeee;
+$gray-300: #e5e5e5;
+$gray-400: #cfd1d3;
+$gray-500: #a7a9ac;
+$gray-600: #2d2c2e;
+
+$blue-light: #dff3fd;
+$blue-dark: #0266b9;
+
+$red: #dd173f;
+
+$yellow: #ffe1ad;
