--- a/src/scss/base/_utils.scss
+++ b/src/scss/base/_utils.scss
@@ -1,23 +1,47 @@
-// Background
+// Fonts
 
-@mixin background-image ($url, $x: center, $y: center, $repeat: no-repeat, $size: cover) {
-    background-image: url($url);
-    background-position-x: $x;
-    background-position-y: $y;
-    background-repeat: $repeat;
-    background-size: $size;    
-}
-
-
-// Font
-
-@mixin font ($color: $black, $font-size: 1.3rem, $line-height: $font-size * 2, $font-weight: normal) {
+@mixin font ($color: $gray-600, $font-size: 1.3rem, $line-height: $font-size * 2, $font-weight: normal) {
     color: $color;
     font-size: $font-size;
     line-height: $line-height;
     font-weight: $font-weight;
 }
 
+.fw-100 {
+    font-weight: 100;
+}
+
+.fw-200 {
+    font-weight: 200;
+}
+
+.fw-300 {
+    font-weight: 300;
+}
+
+.fw-400 {
+    font-weight: 400;
+}
+
+.fw-500 {
+    font-weight: 500;
+}
+
+.fw-600 {
+    font-weight: 600;
+}
+
+.fw-700 {
+    font-weight: 700;
+}
+
+.fw-800 {
+    font-weight: 800;
+}
+
+.fw-900 {
+    font-weight: 900;
+}
 
 // Flexbox
 
@@ -29,11 +53,43 @@
 }
 
 
-// Gradients 
+// Media Queries
 
-@mixin gradient-radial ($in-color, $out-color) {
-    background: $out-color;
-    background: radial-gradient(ellipse at center, $in-color 0%, $out-color 100%);
+$xs: 320px;
+$sm: 544px;
+$md: 768px;
+$lg: 992px;
+$xl: 1200px;
+
+
+@mixin min-xs {
+    @media (min-width: $xs) {
+        @content;
+    }
+}
+
+@mixin min-sm {
+    @media (min-width: $sm) {
+        @content;
+    }
+}
+
+@mixin min-md {
+    @media (min-width: $md) {
+        @content;
+    }
+}
+
+@mixin min-lg {
+    @media (min-width: $lg) {
+        @content;
+    }
+}
+
+@mixin min-xl {
+    @media (min-width: $xl) {
+        @content;
+    }
 }
 
 
@@ -107,24 +163,49 @@
 // Pseudo elements
 
 @mixin before ($z-index: 1, $top: 0, $right: null, $bottom: null, $left: 0) {
-    content: '';
-    position: absolute;
-    top: $top;
-    right: $right;
-    bottom: $bottom;
-    left: $left;
-    z-index: $z-index;
+
+    &:before {
+        content: '';
+        position: absolute;
+        top: $top;
+        right: $right;
+        bottom: $bottom;
+        left: $left;
+        z-index: $z-index;
+        @content;
+    }
+
 }
 
 @mixin after ($z-index: 1, $top: 0, $right: null, $bottom: null, $left: 0) {
-    content: '';
-    position: absolute;
-    top: $top;
-    right: $right;
-    bottom: $bottom;
-    left: $left;
-    z-index: $z-index;
+
+    &:after {
+        content: '';
+        position: absolute;
+        top: $top;
+        right: $right;
+        bottom: $bottom;
+        left: $left;
+        z-index: $z-index;
+        @content;
+    }
+
 }
+
+
+// Separators
+
+.separator-left {
+    margin-left: 8px;
+} 
+
+.separator-right {
+    margin-right: 8px;
+} 
+
+.separator-both {
+    margin: 0 8px;
+}   
 
 
 // Scrolling
@@ -162,6 +243,30 @@
 
 
 // Sizes
+
+.h-0 {
+    height: 0;
+}
+
+.w-0 {
+    width: 0;
+}
+
+.h-100 {
+    height: 100%;
+}
+
+.h-100vh {
+    height: 100vh;
+}
+
+.w-100 {
+    width: 100%;
+}
+
+.w-100vw {
+    width: 100vw;
+}
 
 @mixin size ($size) {
     width: $size;
