--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -30,6 +30,11 @@ a {
 
     &:hover {
         color: $red;
+        text-decoration: none;
+    }
+
+    &:focus{
+        text-decoration: none;
     }
 
 }
