--- a/src/app/components/all-questions/all-questions.view.pug
+++ b/src/app/components/all-questions/all-questions.view.pug
@@ -1,5 +1,5 @@
 .all-questions
-    .all-questions__question
+    .all-questions__question(ng-repeat="question in allQuestions | filter: filterBy | orderBy: sortBy : true")
         .row
             .col-xl-12
                 .box-question
@@ -11,14 +11,14 @@
                                         .col-xl-2
                                             .box-question__heading--avatar
                                                 .avatar.avatar--small
-                                                    img.avatar__img(src="img/avatars/1.jpg" alt="")   
+                                                    img.avatar__img(ng-src="img/avatars/{{ question.author }}.jpg" alt="{{ users[question.author]['name'] }}")   
                                         .col-xl-10        
                                             .box-question__heading--question
                                                 .author
-                                                    a(href="") Eva
+                                                    a(href="") {{ users[question.author]['name'] }}
                                                     span.text--light.separator-left is asking:        
                                                 .title
-                                                    h2 Will insulin make my patient gain weight?
+                                                    h2 {{ question.question }}
 
                         .box-question--bottom
                             .row
@@ -29,52 +29,26 @@
                                                 .action.action--asked
                                                     span.text--light asked
 
-                                        .box-question__content--col
+                                        .box-question__content--col(ng-if="question.moreActivitiesLength")
                                             .box-question__content--more-activites
+                                                | {{ question.moreActivitiesLength }}
                                                 .action.action--more-activites
                                                     span.text--italic more activites
 
-                                        .box-question__content--col
+                                        .box-question__content--col(ng-repeat="activity in question.activities")
                                             .box-question__content--activity
                                                 .avatar.avatar--small
-                                                    img.avatar__img(src="img/avatars/1.jpg" alt="")                                            
-                                                .action.action--commented
-                                                    span.text--light commented
-
-                                        .box-question__content--col
-                                            .box-question__content--activity
-                                                .avatar.avatar--small
-                                                    img.avatar__img(src="img/avatars/1.jpg" alt="")                                            
-                                                .action.action--commented
-                                                    span.text--light commented
-
-                                        .box-question__content--col
-                                            .box-question__content--activity
-                                                .avatar.avatar--small
-                                                    img.avatar__img(src="img/avatars/1.jpg" alt="")                                            
-                                                .action.action--commented
-                                                    span.text--light commented
-
-                                        .box-question__content--col
-                                            .box-question__content--activity
-                                                .avatar.avatar--small
-                                                    img.avatar__img(src="img/avatars/1.jpg" alt="")                                            
-                                                .action.action--answered
-                                                    span.text--light answered                                                                                                                                                                                                  
+                                                    img.avatar__img(ng-src="img/avatars/{{ activity.author }}.jpg" alt="{{ users[activity.author]['name'] }}")                                            
+                                                .action(ng-class="{'action--commented': activitiesTypes[activity.type] == 'commented', 'action--answered': activitiesTypes[activity.type] == 'answered'}")
+                                                    span.text--light {{ activitiesTypes[activity.type] }}                                                                                                                                                                                            
                                                 
                                 .col-xl-3
                                     .box-question__aside
                                         .all-questions__question--stats
-                                            .stat
-                                                span.text--basic 1
-                                                span.text--italic.separator-left related discussion
-                                            .stat
-                                                span.text--basic 1
-                                                span.text--italic.separator-left related discussion
-                                            .stat
-                                                span.text--basic 1
-                                                span.text--italic.separator-left related discussion                                                                                                
+                                            .stat(ng-repeat="stat in question.stats.discussion")
+                                                span.text--basic {{ stat.value }}
+                                                span.text--italic.separator-left {{ stat.name }}                                                                               
 
     .all-questions__load-more
-        button.btn-link
+        button.btn-link(ng-click="loadMoreQuestions()")
             | load more questions
