Single question: view, routes, json data, voting

--- a/src/app/components/home/home.view.pug
+++ b/src/app/components/home/home.view.pug
@@ -1,4 +1,4 @@
-header.header
+header.header(ng-class="{'header--small': currentState == 'single'}")
     .container
 
         .header__content
@@ -8,20 +8,21 @@ header.header
                     .col-xl-2
                         .header__aside
                             .header__back
-                                button.btn-round.btn-round--large.btn-round--linear
+                                a(ui-sref="home.allquestions").btn-round.btn-round--large.btn-round--linear
                                     i.icon-arrow-left
 
                     .col-xl-8
-                        .header__main
+                        .header__main(ng-class="{'header__main--single': currentState == 'single'}")
                             .header__main--left
                                 .header__logo
                                     a(href="/")
-                                         h1 Questions
-                                .header__add
+                                         h1(ng-if="currentState == 'all'") Questions
+                                         h1(ng-if="currentState == 'single'") Question
+                                .header__add(ng-class="{'header__add--space': currentState == 'single'}")
                                     button.btn-round.btn-round--filled
-                                        i.icon-plus                            
+                                        i.icon-plus
 
-                            .header__main--right
+                            .header__main--right(ng-if="currentState == 'all'")
                                 .header__filters
                                     .radio
                                         input(type="radio" id="radio1" name="radio" ng-model="filterBy.author" value="{{ loggedUserID }}")
@@ -37,13 +38,18 @@ header.header
 
                                 .header__sort
                                     span.text--italic Sort by:
-                                    span.separator-both
+                                    span.separator--both
                                         a(href="" ng-click="sortQuestions('recent')" ng-class="{'active': sortBy == 'id'}") recent
                                     span.text--italic or
-                                    span.separator-left
+                                    span.separator--left
                                         a(href="" ng-click="sortQuestions('hot')" ng-class="{'active': sortBy == 'moreActivitiesLength'}") hot
 
-            .header__content--bottom
+                            .header__main--right(ng-if="currentState == 'single'")
+                                span.text--italic Last time discussed 
+                                span.text--italic.separator--both {{ lastTimeDiscussed }} 
+                                span.text--italic ago
+
+            .header__content--bottom(ng-if="currentState == 'all'")
                 .row
                     .col-xl-8.offset-xl-2         
                         .header__search
