--- a/src/app/components/all-questions/all-questions.view.pug
+++ b/src/app/components/all-questions/all-questions.view.pug
@@ -8,17 +8,18 @@
                             .col-xl-9
                                 .box-question__heading
                                     .row
-                                        .col-xl-2
+                                        .col-xl-2.no-padding-left.no-padding-right
                                             .box-question__heading--avatar
                                                 .avatar.avatar--small
                                                     img.avatar__img(ng-src="img/avatars/{{ question.author }}.jpg" alt="{{ users[question.author]['name'] }}")   
-                                        .col-xl-10        
+                                        .col-xl-10.no-padding-left  
                                             .box-question__heading--question
                                                 .author
                                                     a(href="") {{ users[question.author]['name'] }}
-                                                    span.text--light.separator-left is asking:        
+                                                    span.text--light.separator--left is asking:        
                                                 .title
-                                                    h2 {{ question.question }}
+                                                    a(ui-sref="home.singlequestion({ url: toUrl(question.question) })") 
+                                                        h2 {{ question.question }}
 
                         .box-question--bottom
                             .row
@@ -47,7 +48,7 @@
                                         .all-questions__question--stats
                                             .stat(ng-repeat="stat in question.stats.discussion")
                                                 span.text--basic {{ stat.value }}
-                                                span.text--italic.separator-left {{ stat.name }}                                                                               
+                                                span.text--italic.separator--left {{ stat.name }}                                                                               
 
     .all-questions__load-more
         button.btn-link(ng-click="loadMoreQuestions()")
