--- a/src/scss/modules/_typography.scss
+++ b/src/scss/modules/_typography.scss
@@ -29,6 +29,7 @@ h2 {
     font-weight: 600;
     font-family: $lora;
     font-style: italic;
+    letter-spacing: .02rem;
 
     @include min-sm {
     }  
@@ -36,7 +37,7 @@ h2 {
 }
 
 p {
-    @include font($gray-600, 1.4rem, 2.4rem, 400);
+    @include font($gray-600, 1.2rem, 2rem, 400);
 }
 
 .text--basic {
